# embree-tinyobj-example

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
include/: camera.h  core.h  image.h  material.h  mesh.h  scene.h  shape.h
tests/: CMakeLists.txt  embree_test.cpp
